@@ -9,13 +9,7 @@ use Test::More 'no_plan';
 use Method::Signatures;
 
 is( Foo->bar(42), 42 );
-
-TODO: {
-    local $TODO = 'method not done at compile time';
-
-    ok eval { is( Foo->foo(42), 42 ) };
-    is $@, '';
-}
+is( Foo->foo(42), 42 );
 
 sub bar {
     my($self, $arg) = @_;
