@@ -5,6 +5,7 @@
 
     Bug Fixes
     * The debugger now works, thanks to an upgrade in Devel::Declare.
+    * methods are now declared at compile time, like regular subs.
 
 
 20081021.1911  Tue Oct 21 19:11:47 PDT 2008
